--- a/clubs.html
+++ b/clubs.html
@@ -44,7 +44,127 @@
 
 
 		<div class="container">
-		  	<div class="filterDiv stem">
+		  	<div class="filterDiv community">
+			  	<div class="club">
+					<div class="clubDiv">
+						<div class=clubText>
+							<div class=clubInfo>
+								<span class=clubname>Recycling Club</span>
+								<span class=clubinfo>Ages 14-18</span>
+								<span class=clubinfo>Expensive</span>
+							</div>
+							<div class=clubDescription>
+								<h1>Joining a recycling group or club is a great way to learn more about the natural environment while working to help it as well. Most recycling clubs gather a large group of volunteers and at a specfic location, throw away any trash and collect all recyclable materials. In schools, recycling groups can buy or create recycling bins that can be placed in classrooms and voluteers may regularly collect the recylcable materials. </h1>
+							</div>
+						</div>
+						<div class=clubImage>
+							<img class=clubimages src="recycle.jpg">
+						</div>
+					</div>
+				</div>		
+			</div>
+
+			<div class="filterDiv community">
+			  	<div class="club">
+					<div class="clubDiv">
+						<div class=clubText>
+							<div class=clubInfo>
+								<span class=clubname>UNICEF Club</span>
+								<span class=clubinfo>Ages 14-18</span>
+								<span class=clubinfo>Expensive</span>
+							</div>
+							<div class=clubDescription>
+								<h1>The UNICEF High School Club program is a youth-led initiative that partners with UNICEF to educate, advocate and fundraise to support UNICEF's lifesaving work. Members of a Unicef Club work together to raise awareness for the global issues that UNICEF works to solve and acquires the necessary funds to solve these problems. </h1>
+							</div>
+						</div>
+						<div class=clubImage>
+							<img class=clubimages src="deca.jpg">
+						</div>
+					</div>
+				</div>		
+			</div>
+
+			<div class="filterDiv community">
+			  	<div class="club">
+					<div class="clubDiv">
+						<div class=clubText>
+							<div class=clubInfo>
+								<span class=clubname>Cancer Awareness Club</span>
+								<span class=clubinfo>Ages 14-18</span>
+								<span class=clubinfo>Expensive</span>
+							</div>
+							<div class=clubDescription>
+								<h1>If you have a passion for raising awareness for problems that are not often talked about, specifically rare diseases like Cancer, this is the club for you. Members of a Cancer Awareness club generally work to raise awareness for certaint types of cancer through social media posts, school banners, fundraisers, etc.</h1>
+							</div>
+						</div>
+						<div class=clubImage>
+							<img class=clubimages src="cancer.jpg">
+						</div>
+					</div>
+				</div>		
+			</div>
+
+			<div class="filterDiv community">
+			  	<div class="club">
+					<div class="clubDiv">
+						<div class=clubText>
+							<div class=clubInfo>
+								<span class=clubname>Red Cross</span>
+								<span class=clubinfo>Ages 14-18</span>
+								<span class=clubinfo>Expensive</span>
+							</div>
+							<div class=clubDescription>
+								<h1>The American Red Cross, also known as The American National Red Cross, is a humanitarian organization that provides emergency assistance, disaster relief, and disaster preparedness education in the United States. Red Cross Clubs are an extension of a local Red Cross Region and work on service projects to help the community and those in need. </h1>
+							</div>
+						</div>
+						<div class=clubImage>
+							<img class=clubimages src="redcross.jpg">
+						</div>
+					</div>
+				</div>		
+			</div>
+
+			<div class="filterDiv community">
+			  	<div class="club">
+					<div class="clubDiv">
+						<div class=clubText>
+							<div class=clubInfo>
+								<span class=clubname>Habitat for Humanity</span>
+								<span class=clubinfo>Ages 14-18</span>
+								<span class=clubinfo>Expensive</span>
+							</div>
+							<div class=clubDescription>
+								<h1>Habitat for Humanity is a nonprofit organization that gathers volunteers and resources to build cheap, affordable homes for those in need of proper shelter. As a student group, you and your friends can volunteer and spend a couple hours helping either physically or even online. </h1>
+							</div>
+						</div>
+						<div class=clubImage>
+							<img class=clubimages src="habitat.jpg">
+						</div>
+					</div>
+				</div>		
+			</div>
+
+			<div class="filterDiv community">
+			  	<div class="club">
+					<div class="clubDiv">
+						<div class=clubText>
+							<div class=clubInfo>
+								<span class=clubname>Amnesty International</span>
+								<span class=clubinfo>Ages 14-18</span>
+								<span class=clubinfo>Expensive</span>
+							</div>
+							<div class=clubDescription>
+								<h1>Amnesty International is an organization that has begun a movement to fight injustice and help create a world where human rights are enjoyed by all. An Amnesty International club generally consists of students who meet regularly and engage in specific human rights campaigns or protests that they are passionate about. </h1>
+							</div>
+						</div>
+						<div class=clubImage>
+							<img class=clubimages src="amnesty.jpg">
+						</div>
+					</div>
+				</div>		
+			</div>
+
+			<div class="filterDiv stem">
 			  	<div class="club">
 					<div class="clubDiv">
 						<div class=clubText>
@@ -355,26 +475,6 @@
 						</div>
 						<div class=clubImage>
 							<img class=clubimages src="biologyclub.jpg">
-						</div>
-					</div>
-				</div>		
-			</div>
-
-			<div class="filterDiv subject">
-			  	<div class="club">
-					<div class="clubDiv">
-						<div class=clubText>
-							<div class=clubInfo>
-								<span class=clubname>History Club</span>
-								<span class=clubinfo>Ages 14-18</span>
-								<span class=clubinfo>Expensive</span>
-							</div>
-							<div class=clubDescription>
-								<h1>The FIRST Robotics Competition is an international high school robotics competition. Each year, teams of high school students, coaches, and mentors work during a six-week period to build robots capable of competing in that year's game that weigh up to 125 pounds</h1>
-							</div>
-						</div>
-						<div class=clubImage>
-							<img class=clubimages src="frc.jpg">
 						</div>
 					</div>
 				</div>		
