Pictures File Path Update

--- a/clubs.html
+++ b/clubs.html
@@ -15,7 +15,7 @@
 	<body>
 
 		<div id=navbar>	
-			<a href="index.html"><span class=title><img id=logo src="logo9.png"></span></a>
+			<a href="index.html"><span class=title><img id=logo src="Pictures/logo9.png"></span></a>
 			<a href="clubs.html"><span class=title>Clubs</span></a>
 			<span class=title>SAT/ACT</span>
 			<a href="programs.html"><span class=title>Programs</span></a>
@@ -78,7 +78,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="deca.jpg">
+							<img class=clubimages src="Pictures/deca.jpg">
 						</div>
 					</div>
 				</div>		
@@ -98,7 +98,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="cancer.jpg">
+							<img class=clubimages src="Pictures/cancer.jpg">
 						</div>
 					</div>
 				</div>		
@@ -118,7 +118,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="redcross.jpg">
+							<img class=clubimages src="Pictures/redcross.jpg">
 						</div>
 					</div>
 				</div>		
@@ -138,7 +138,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="habitat.jpg">
+							<img class=clubimages src="Pictures/habitat.jpg">
 						</div>
 					</div>
 				</div>		
@@ -158,7 +158,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="amnesty.jpg">
+							<img class=clubimages src="Pictures/amnesty.jpg">
 						</div>
 					</div>
 				</div>		
@@ -178,7 +178,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="deca.jpg">
+							<img class=clubimages src="Pictures/deca.jpg">
 						</div>
 					</div>
 				</div>		
@@ -198,7 +198,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="fbla.png">
+							<img class=clubimages src="Pictures/fbla.png">
 						</div>
 					</div>
 				</div>		
@@ -218,7 +218,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="tsa.jpg">
+							<img class=clubimages src="Pictures/tsa.jpg">
 						</div>
 					</div>
 				</div>		
@@ -238,7 +238,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="modelun.jpg">
+							<img class=clubimages src="Pictures/modelun.jpg">
 						</div>
 					</div>
 				</div>		
@@ -258,7 +258,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="bookclub.jpg">
+							<img class=clubimages src="Pictures/bookclub.jpg">
 						</div>
 					</div>
 				</div>		
@@ -278,7 +278,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="politicalclub.jpg">
+							<img class=clubimages src="Pictures/politicalclub.jpg">
 						</div>
 					</div>
 				</div>		
@@ -297,7 +297,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="comicbookclub.jpg">
+							<img class=clubimages src="Pictures/comicbookclub.jpg">
 						</div>
 					</div>
 				</div>		
@@ -316,7 +316,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="languageclub.jpg">
+							<img class=clubimages src="Pictures/languageclub.jpg">
 						</div>
 					</div>
 				</div>		
@@ -335,7 +335,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="photographyclub.jpg">
+							<img class=clubimages src="Pictures/photographyclub.jpg">
 						</div>
 					</div>
 				</div>		
@@ -354,7 +354,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="videotechclub.jpg">
+							<img class=clubimages src="Pictures/videotechclub.jpg">
 						</div>
 					</div>
 				</div>		
@@ -374,7 +374,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="filmclub.jpg">
+							<img class=clubimages src="Pictures/filmclub.jpg">
 						</div>
 					</div>
 				</div>		
@@ -394,7 +394,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="competitivemathclub.jpg">
+							<img class=clubimages src="Pictures/competitivemathclub.jpg">
 						</div>
 					</div>
 				</div>		
@@ -414,7 +414,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="mathclub.jpg">
+							<img class=clubimages src="Pictures/mathclub.jpg">
 						</div>
 					</div>
 				</div>		
@@ -434,7 +434,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="ecologyclub.jpg">
+							<img class=clubimages src="Pictures/ecologyclub.jpg">
 						</div>
 					</div>
 				</div>		
@@ -454,7 +454,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="physicsclub.jpg">
+							<img class=clubimages src="Pictures/physicsclub.jpg">
 						</div>
 					</div>
 				</div>		
@@ -474,7 +474,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="biologyclub.jpg">
+							<img class=clubimages src="Pictures/biologyclub.jpg">
 						</div>
 					</div>
 				</div>		
@@ -495,7 +495,7 @@
 							</div>
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="frc.jpg">
+							<img class=clubimages src="Pictures/frc.jpg">
 						</div>
 					</div>
 				</div>		
@@ -518,7 +518,7 @@
 
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="scienceolympiad.jpg">
+							<img class=clubimages src="Pictures/scienceolympiad.jpg">
 						</div>
 					</div>
 				</div>		
@@ -541,7 +541,7 @@
 
 						</div>
 						<div class=clubImage>
-							<img class=clubimages src="hosa.jpg">
+							<img class=clubimages src="Pictures/hosa.jpg">
 						</div>
 					</div>
 				</div>		
