Pictures File Path Update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 
 		<div id=navbar>	
-			<a href="index.html"><span class=title><img id=logo src="logo9.png"></span></a>
+			<a href="index.html"><span class=title><img id=logo src="Pictures/logo9.png"></span></a>
 			<a href="clubs.html"><span class=title>Clubs</span></a>
 			<span class=title>SAT/ACT</span>
 			<a href="programs.html"><span class=title>Programs</span></a>
@@ -27,7 +27,7 @@
 
 		<div id=mainDiv1>
 			<div class="container">
-				<img class=mainimage src="mountain.png">
+				<img class=mainimage src="Pictures/mountain.png">
                 <div class="activeheader"><strong>Project Future</strong></div>
                 <div class="activetext"><strong>Paving the path for the education of the future</strong></div>
             </div>
@@ -41,17 +41,17 @@
 
 		<div id=iconsDiv>
 			<div class=icons>
-				<img class=iconimages src="middleschoolmodern.png">
+				<img class=iconimages src="Pictures/middleschoolmodern.png">
 				<p class=icontext >Middle School</p>
 			</div>
 
 			<div class=icons>
-				<img class=iconimages src="highschoolmodern.png">
+				<img class=iconimages src="Pictures/highschoolmodern.png">
 				<p class=icontext >High School</p>
 			</div>
 
 			<div class=icons>
-				<img class=iconimages src="universitymodern.png">
+				<img class=iconimages src="Pictures/universitymodern.png">
 				<p class=icontext >University</p>
 			</div>
 		</div>
