Navbar and Directory updates

--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
 		<div id=navbar>	
 			<a href="index.html"><span class=title><img id=logo src="Pictures/logo9.png"></span></a>
 			<a href="clubs.html"><span class=title>Clubs</span></a>
-			<span class=title>SAT/ACT</span>
+			<a href="sat.html"><span class=title>SAT</span></a>
+			<a href="act.html"><span class=title>ACT</span></a>
 			<a href="programs.html"><span class=title>Programs</span></a>
-			<span class=title>Colleges</span>
 			<span class=title1>Forum</span>
 			<span id=login>Login</span>
 			<button id="signup">Sign Up</button>
-
 		</div>
 
 		<div id=mainDiv1>
