--- a/act.html
+++ b/act.html
@@ -56,7 +56,7 @@
 			</div>
 			<div class=sectionfourth4 style="background-color: #077187">
 				<h1 class=section4header>Study Guides + Practice Tests</h1>
-				<p class=section4para>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborum</p>
+				<p class=section4para>These books have tons of study material detailing the parts of the ACT and material that aims to teach individuals the topics covered by the test. With full sized practice tests that closely resemble the real test, you will be able to practice the test before you actually take it. </p>
 			</div>
 		</div>
 
@@ -65,7 +65,7 @@
 		<div class=mainDiv2 style="background-color: #9ECE9A">
 			<div class=sectionthird1 style="background-color: #9ECE9A">
 				<h1 class=section1header>Video Lessons + Games + Quizzes</h1>
-				<p class=section1para>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborum</p>
+				<p class=section1para>These websites have thousands of video lessons, games, quizzes, and full sized ACT practice tests that can give you a better chance at improving your ACT score. </p>
 			</div>
 			<div class=sectionthird2 style="background-color: #9ECE9A">
 				<a href="https://khanacademy.org" target="_blank"><img class=image3 src="Pictures/khan.png"></a>						
@@ -88,14 +88,14 @@
 			</div>
 			<div class=sectionfourth4 style="background-color: #074F57">
 				<h1 class=section4header>English Practice</h1>
-				<p class=section4para>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborum</p>
+				<p class=section4para>These websites are great ways to practice your vocabulary, grammar, and punctuation knowledge to prepare yourself for the English portion of the ACT.</p>
 			</div>
 		</div>
 
 		<div class=mainDiv2 style="background-color: #E4C5AF">
 			<div class=sectionthird1 style="background-color: #E4C5AF">
 				<h1 class=section1header>Math Practice</h1>
-				<p class=section1para>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborum</p>
+				<p class=section1para>These ACT approved guides to the mathematics portion of the ACT have in-depth material that teach exactly how to solve specfic math problems along with thousands of questions and math ACT tests.</p>
 			</div>
 			<div class=sectionthird2 style="background-color: #E4C5AF">
 				<a href="https://www.amazon.com/Official-ACT-Mathematics-Guide/dp/1119634377/ref=sr_1_3?crid=3I9EE2O3CFG47&dchild=1&keywords=act+mathematics+guide&qid=1597613810&s=books&sprefix=act+mathematics+guide%2Cstripbooks%2C176&sr=1-3" target="_blank"><img class=image8 src="Pictures/actmathematicsguide.jpg"></a>						
