--- a/sat.html
+++ b/sat.html
@@ -56,7 +56,7 @@
 			</div>
 			<div class=sectionfourth4 style="background-color: #52B788">
 				<h1 class=section4header>Study Guides + Practice Tests</h1>
-				<p class=section4para>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborum</p>
+				<p class=section4para>These professionally approved and edited books have tons of study material detailing the various parts of the SAT and what you can do to ace it, along with full sized practice tests that closely resemble the real test. </p>
 			</div>
 		</div>
 
@@ -65,7 +65,7 @@
 		<div class=mainDiv2 style="background-color: #f5c867">
 			<div class=sectionthird1 style="background-color: #f5c867">
 				<h1 class=section1header>Video Lessons + Practice Questions</h1>
-				<p class=section1para>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborum</p>
+				<p class=section1para>These websites have an extensive collection of video lessons, online study material, and banks of practice questions that can help you learn the various topics covered by the official test. </p>
 			</div>
 			<div class=sectionthird2 style="background-color: #f5c867">
 				<a href="https://khanacademy.org" target="_blank"><img class=image3 src="Pictures/khan.png"></a>						
@@ -88,7 +88,7 @@
 			</div>
 			<div class=sectionfourth4 style="background-color: #982649">
 				<h1 class=section4header>Vocabulary + Literature</h1>
-				<p class=section4para>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborum</p>
+				<p class=section4para>If you want to practice SAT vocabulary and english grammer/punctuation, these online resources are for you. These websites have great games and learning tips/tricks so you can master the English SAT as efficiently as possible. </p>
 			</div>
 		</div>
 
