--- a/clubs.html
+++ b/clubs.html
@@ -15,7 +15,7 @@
 	<body>
 
 		<div id=navbar>	
-			<a href="index.html"><span class=title><img id=logo src="Pictures/logo9.png"></span></a>
+			<a href="index.html"><span class=title><img id=logo src="Pictures/PROJECTFUTURE1.png"></span></a>
 			<a href="clubs.html"><span class=title>Clubs</span></a>
 			<a href="sat.html"><span class=title>SAT</span></a>
 			<a href="act.html"><span class=title>ACT</span></a>
