--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <title></title>
       <link rel="stylesheet" href="Styles1.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
 	<style>
