SAT and ACT Responsive

--- a/act.html
+++ b/act.html
@@ -4,6 +4,7 @@
       <title></title>
       <link rel="stylesheet" href="actStyles.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script src="elementJS.js"></script>
 	</head>
 
