--- a/sat.html
+++ b/sat.html
@@ -4,6 +4,7 @@
       <title></title>
       <link rel="stylesheet" href="satStyles.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script src="elementJS.js"></script>
 	</head>
 
@@ -86,7 +87,7 @@
 			<div class=sectionfourth2 style="background-color: #982649">
 				<a href="https://quizlet.com" target="_blank"><img class=image7 src="Pictures/quizlet.png"></a>						
 			</div>
-			<div class=sectionfourth4 style="background-color: #982649">
+			<div class=sectionfourth44 style="background-color: #982649">
 				<h1 class=section4header>Vocabulary + Literature</h1>
 				<p class=section4para>If you want to practice SAT vocabulary and english grammer/punctuation, these online resources are for you. These websites have great games and learning tips/tricks so you can master the English SAT as efficiently as possible. </p>
 			</div>
