--- a/act.html
+++ b/act.html
@@ -21,9 +21,8 @@
 			<a href="sat.html"><span class=title>SAT</span></a>
 			<a href="act.html"><span class=title>ACT</span></a>
 			<a href="programs.html"><span class=title>Programs</span></a>
-			<span class=title1>Forum</span>
-			<span id=login>Login</span>
-			<button id="signup">Sign Up</button>
+			<a href="profile.html"><span class=title1>Profile</span></a>
+			<a href="login.html"><button id="login">Account</button></a>
 		</div>
 
 		<div class=mountainsDiv>
